# serializer version: 1
# name: test_number_update[config_prod_slat_rotate.json-status_prod_slat_rotate.json-number.zonwering_begane_grond_keuken_alle_maximum_rotation]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by WMS WebControl pro API',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Keuken alle Maximum Rotation',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 127,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.zonwering_begane_grond_keuken_alle_maximum_rotation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75',
  })
# ---
# name: test_number_update[config_prod_slat_rotate.json-status_prod_slat_rotate.json-number.zonwering_begane_grond_keuken_alle_minimum_rotation]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by WMS WebControl pro API',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Keuken alle Minimum Rotation',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -127,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.zonwering_begane_grond_keuken_alle_minimum_rotation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-75',
  })
# ---
# name: test_number_update[config_prod_slat_rotate.json-status_prod_slat_rotate.json-number.zonwering_begane_grond_keuken_alle_raw_rotation]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by WMS WebControl pro API',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Keuken alle Raw Rotation',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 127,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -127,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.zonwering_begane_grond_keuken_alle_raw_rotation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
